# speckle-automate-qa_qc_workshop

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
Exercises/exercise_0/: README.md  function.py  inputs.py
Exercises/exercise_1/: README.md  function.py  inputs.py
Exercises/exercise_2/: README.md  function.py  inputs.py  rules.py
Exercises/exercise_3/: README.md  function.py  inputs.py  rules.py
Utilities/: README.md
tests/: README.md  local_test.py  local_test_exercise0.py  local_test_exercise1.py  local_test_exercise2.py  local_test_exercise3.py
